# autodrive_openenv

./: README.md  agent_baseline.py  client.py  eval.py  inference.py  inference_report.json  openenv.yaml  openenv_compat.py  pyproject.toml  readme  train.py
autodrive_env/: .dockerignore  .openenvignore  Dockerfile  __init__.py  agent_baseline.py  inference.py  inference_report.json  models.py  openenv.yaml  pyproject.toml  smoke_test.py
autodrive_env/server/: app.py  constants.py  curriculum.py  driving_actions.py  judge.py  llm_client.py  scenario_generator.py  scenario_injectors.py
server/: __init__.py  adversarial_designer.py  app.py  autodrive_gym_environment.py  constants.py  curriculum.py  driving_backend.py  grader.py  judge.py  llm_client.py  scenario_generator.py
tasks/: __init__.py  graders.py
